[package]
name = "liblqr-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"

[dev-dependencies]
image = "0.23.14"
criterion = { version = "0.3", features = ["html_reports"] }

[profile.dev]
debug = true

[[bench]]
name = "lqr"
harness = false
